# decondemo

./: .gitignore  In `Latch.__call__  Let's use `yield from` for robustness, as `self.emit()` is defined as  README.md  README.org  The provided traceback snippet  pyproject.toml  readme.org
In `src/decondemo/: chunked.py
decondemo/: __init__.py
src/decondemo/: __init__.py  __main__.py  chunked.py  convo.py  decon.py  filters.py  plots.py  signals.py  util.py
test/: test_chunked.py
