[project]
name = "decondemo"
version = "0.1.0"
description = "A demo package for DFT signal deconvolution."
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "click",
    "pyqt6>=6.7.1",
    "scipy>=1.10.1",
    "pytest>=8.3.5",
]
authors = [
    { name = "Brett Viren", email = "brett.viren@gmail.com" }
]
readme = "README.md"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
decondemo = "decondemo.__main__:cli"
